--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
     </style>
 
 
-    <!-- Customr buttons -->
+    <!-- Custom buttons -->
     <style name="WhiteButton">
         <item name="android:layout_width">80dp</item>
         <item name="android:layout_height">80dp</item>
